--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:active {
     color: aliceblue;
 }
 
-/* .card:hover {
+.card:hover {
     background-color: #929487;
 
     display:block;
@@ -62,23 +62,21 @@ a:active {
 
 
 .card-title {
-    color: rgb(221, 208, 189);
-    /* color: #ffcf88; */
+    color:black;
     font-size: 20px;
     text-align: center;  
     font-family: 'Lora', serif;  
-    
 }
 
 .card-subtitle {
     font-family: 'Satisfy', cursive;
 }
 
-/* .card-text  { */
-    /* font-family: 'Poppins', sans-serif;} */
+.card-text  {
+    font-family: 'Poppins', sans-serif;}
 
 h4 {
-    /* color: #ff9b08; */
+    
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     font-weight: bolder;
