--- a/style.css
+++ b/style.css
@@ -36,7 +36,10 @@ a:active {
     background-color: rgba(83, 45, 4, 0.75);
     margin-top: 2px;
     margin-bottom: 2px;
-    border: solid rgb(61, 32, 1);;
+    margin-left: 4px;
+    margin-right: 4px;
+    max-width:400px;
+    border: solid rgb(61, 32, 1);
     /* box-shadow: -5px 5px 17px 9px rgba(97,92,92,0.62);
 -webkit-box-shadow: -5px 5px 17px 9px rgba(97,92,92,0.62);
 -moz-box-shadow: -5px 5px 17px 9px rgba(97,92,92,0.62); */
@@ -58,7 +61,7 @@ a:active {
     transition-duration: 0.8s;
     z-index: 5;
 
-}
+}*/
 
 
 .card-title {
