--- a/style.css
+++ b/style.css
@@ -99,3 +99,23 @@ h4 {
 .btn-secondary:hover {
     background-color: rgba(0, 0, 0, 0.493);
 }
+
+/* Hero Section */
+.hero-image {
+    
+   
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+  }
