--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@
     color: aliceblue;
 }
 
-/* .card:hover {
+/* */
+    .card:hover {
     background-color: #929487;
 
     display:block;
@@ -99,23 +100,3 @@ h4 {
 .btn-secondary:hover {
     background-color: rgba(0, 0, 0, 0.493);
 }
-
-/* Hero Section */
-.hero-image {
-    
-   
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-  }
