--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@
     font-style: italic;
     color: aliceblue;
 }
+.card-footer{
+    border: none;
+    text-align: center;
+    
+}
 
 .card:hover {
     background-color: #929487;
@@ -151,6 +156,26 @@ h4 {
 }
 .modalPrice{
     opacity: .4;
+}
+
+/* Profile pictures */
+.image1 img{
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    height: 200px;
+    width: 100%;
+}
+.image2 img{
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+    width: 140px;
+    height: 140px;
+    border-radius:50%;
+    border: 7px solid #fff;
+    margin-top: -70px;
 }
 
 .checkout:hover{
