--- a/style.css
+++ b/style.css
@@ -31,12 +31,19 @@ a {
     text-decoration: none;
     color: white;
 }
-
+.nav-item, .navbar-brand {
+    transition: 50ms linear;
+}
 .nav-item:hover {
-    background-color: #929487;
+    /* background-color: #929487; */
+    transform: scale(1.25);
 }
 
-.ul li:hover {background: #555;}
+.ul li:hover {
+    background: #555;
+}
+
+
 
 .a:active {
     color: red;
