--- a/style.css
+++ b/style.css
@@ -211,4 +211,7 @@ h4 {
 .btn-group-vertical>.btn:not(:first-child),.btn-group-vertical>.btn-group:not(:first-child) {
             margin-top: 0;
             }
-   
+
+            .footer:hover{
+                opacity: .7;
+            }
