--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .navbar {
     /* background-color: #6b6054; */
-    background-color: rgba(83, 45, 4, 0.25);
+    background-color: rgba(83, 45, 4, 0.5);
 }
 .navbar-brand {
     font-family: 'Satisfy', cursive;
@@ -35,12 +35,12 @@ a {
     transition: 50ms linear;
 }
 .nav-item:hover {
-    /* background-color: #929487; */
+    background-color: rgb(224, 167, 9);
     transform: scale(1.25);
 }
 
 .ul li:hover {
-    background: #555;
+    background: rgba(187, 170, 152, 0.5); 
 }
 
 
@@ -71,11 +71,11 @@ a {
     border: none;
     text-align: center;
     background: none;
-    
-}
-.card-footer {
     transition: 50ms linear;
 }
+/* .card-footer {
+    
+} */
 
 .card-footer:hover {
     transform: scale(1.20);
@@ -123,14 +123,14 @@ h4 {
 }
 
 
-.btn-secondary {
+/* .btn-secondary {
     background-color: rgba(83, 45, 4, 1);
-}
+} */
 
-.btn-secondary:hover {
+/* .btn-secondary:hover {
     background-color: rgba(0, 0, 0, 0.493);
 
-}
+} */
 
 /* Product Category Card Background Color */
 .productModal{
