added class for carousel images, subject for further customization

--- a/style.css
+++ b/style.css
@@ -206,6 +206,13 @@ h4 {
     opacity: .7;
 }
 
+.carousel-img {
+    object-fit: cover;
+    object-position: center;
+    height: 75vh;
+    overflow: hidden;
+}
+
             /* checkout page classes */
 
 .btn-group-vertical>.btn:not(:first-child),.btn-group-vertical>.btn-group:not(:first-child) {
