--- a/style.css
+++ b/style.css
@@ -106,7 +106,11 @@ a {
 }
 
 .card-text  {
-    font-family: 'Poppins', sans-serif;}
+    font-family: 'Poppins', sans-serif;
+    font-size: 16pt;
+    color:rgb(255, 233, 210);
+}
+    
     
 
 h4 {
