change animation settings for nav-item hover

--- a/style.css
+++ b/style.css
@@ -37,11 +37,12 @@ a {
     color: white;
 }
 .nav-item, .navbar-brand {
-    transition: 50ms linear;
+    /* transition: 50ms linear; */
+    transition: all .2s ease-in-out;
 }
 .nav-item:hover {
     background-color: rgb(224, 167, 9);
-    transform: scale(1.25);
+    transform: scale(1.30);
 }
 
 .ul li:hover {
