changes in footers on all pages, align images and change fontsize to fs-4 in aboutpage

--- a/style.css
+++ b/style.css
@@ -131,8 +131,24 @@ h4 {
     
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     align-items: center;
+}
+
+.footerAttr {
+    
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight:900;
+    align-items: center;
+}
+
+.footerHeight{
+    height: 350px;
+    padding-top: 300px;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .imgWidth{
